[package]
name = "nb-connect"
version = "1.0.2"
authors = [
  "Stjepan Glavina <stjepang@gmail.com>",
  "Jayce Fayne <jayce.fayne@mailbox.org>",
]
edition = "2018"
description = "Non-blocking TCP or Unix connect"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/nb-connect"
homepage = "https://github.com/stjepang/nb-connect"
documentation = "https://docs.rs/nb-connect"
keywords = ["TcpStream", "UnixStream", "socket2", "polling"]
categories = ["asynchronous", "network-programming", "os"]
readme = "README.md"

[target."cfg(unix)".dependencies]
libc = "0.2.77"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "ws2tcpip"] }

[dev-dependencies]
polling = "2.0.0"
