[package]
name = "nb-connect"
version = "1.0.3"
authors = [
  "Stjepan Glavina <stjepang@gmail.com>",
  "Jayce Fayne <jayce.fayne@mailbox.org>",
]
edition = "2018"
description = "Non-blocking TCP or Unix connect"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/nb-connect"
homepage = "https://github.com/smol-rs/nb-connect"
documentation = "https://docs.rs/nb-connect"
keywords = ["TcpStream", "UnixStream", "socket2", "polling"]
categories = ["asynchronous", "network-programming", "os"]

[dependencies]
socket2 = { version = "0.3.19", features = ["unix"] }

[target."cfg(unix)".dependencies]
libc = "0.2.77"

[dev-dependencies]
polling = "2.0.0"
