[package]
name = "nb-connect"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.2.0"
authors = [
  "Stjepan Glavina <stjepang@gmail.com>",
  "Jayce Fayne <jayce.fayne@mailbox.org>",
]
edition = "2018"
description = "Non-blocking TCP or Unix connect"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/nb-connect"
homepage = "https://github.com/smol-rs/nb-connect"
documentation = "https://docs.rs/nb-connect"
keywords = ["TcpStream", "UnixStream", "socket2", "polling"]
categories = ["asynchronous", "network-programming", "os"]

[dependencies]
socket2 = { version = "0.4.0", features = ["all"] }

[target."cfg(unix)".dependencies]
libc = "0.2.77"

[dev-dependencies]
polling = "2.0.0"
